fix items list to not require double tap to edit when on mobile

--- a/app/styles/items-list.scss
+++ b/app/styles/items-list.scss
@@ -35,6 +35,11 @@
 				}
 			}
 		}
+		@include mobile {
+			.remove, .edit {
+				display: inline-block;
+			}
+		}
 	}
 	.remove, .edit {
 		display: none;
